ligolang/src/test/contracts/negative/reuse_variable_name_block.jsligo
let foo = (): int => {
    let x = 2;
    let x = 2;
    return x;
}